--- a/style.css
+++ b/style.css
@@ -73,3 +73,44 @@ html {
     align-items: center;
     flex-grow: 1;
 }
+
+.left-container {
+    display: flex;
+    flex-direction: column;
+}
+
+.colors-container {
+    margin-top: 10px;
+    display: none;
+    flex-direction: column;
+}
+
+.colors {
+    display: flex;
+    flex-direction: row;
+    flex-wrap: wrap;
+    margin-top: 10px;
+    width: 910px;
+}
+
+.color {
+    display: flex;
+    align-items: center;
+    border: 1px solid black;
+    margin-left: 5px;
+    margin-right: 5px;
+    margin-top: 5px;
+    margin-bottom: 5px;
+    padding: 5px;
+}
+
+.delete {
+    color: red;
+    margin-left: 5px;
+}
+
+.box {
+    width: 30px;
+    height: 30px;
+    margin-right: 5px;
+}
